Fix scrollbar color in chrome

--- a/css/site.css
+++ b/css/site.css
@@ -7,6 +7,7 @@
 
 html {
   scrollbar-color: theme("colors.evergreen.700") theme("colors.evergreen.900");
+  scrollbar-width: auto;
 }
 
 body {
@@ -16,6 +17,20 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 100%;
+}
+
+body::-webkit-scrollbar {
+  width: 14px;
+}
+
+body::-webkit-scrollbar-track {
+  background: theme("colors.evergreen.900");
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: theme("colors.evergreen.700");
+  border-radius: 6px;
+  border: 3px solid theme("colors.evergreen.900");
 }
 
 img {
